[package]
name = "mcpdhr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Pinecone

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
